--- a/Apptwitt/Apptwitt/Apptwitt/MainPage.xaml
+++ b/Apptwitt/Apptwitt/Apptwitt/MainPage.xaml
@@ -51,7 +51,7 @@
                         <Button Text="Fil"  BackgroundColor="Transparent"></Button>
                         <Button Text="Notifications" BackgroundColor="Transparent"></Button>
                         <Button Text="Message" BackgroundColor="Transparent"></Button>
-                        <ImageButton Source="profil.png" Aspect="AspectFit" HorizontalOptions="CenterAndExpand"></ImageButton>
+                        <ImageButton Source="profil.png" Aspect="AspectFit" WidthRequest="30" HorizontalOptions="CenterAndExpand"></ImageButton>
                     </StackLayout>
                 </StackLayout>
             </StackLayout>
